--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "node app.js"
     },
     "dependencies": {
-        "express": "^4.21.0"
+        "express": "^4.21.0",
+        "node-telegram-bot-api": "^0.66.0"
     }
 }
