--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "express": "^4.21.0",
+        "node-fetch": "^3.3.2",
         "node-telegram-bot-api": "^0.66.0"
     }
 }
