--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "node app.js"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.21.0",
         "node-fetch": "^3.3.2",
         "node-telegram-bot-api": "^0.66.0"
