--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "node app.js"
     },
     "dependencies": {
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "express": "^4.21.0",
         "node-fetch": "^2.7.0",
