--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "axios": "^1.7.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.0",
     "inquirer": "^11.1.0",
     "node-fetch": "^2.7.0",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "path": "^0.12.7"
   },
   "keywords": [],
   "author": "",
