--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
+    "ethers": "^6.13.3",
     "express": "^4.21.0",
     "inquirer": "^11.1.0",
     "node-fetch": "^2.7.0",
     "node-telegram-bot-api": "^0.66.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "punycode": "^2.3.1",
+    "tweetnacl": "^1.0.3",
+    "web3": "^4.13.0",
+    "whatwg-url": "^14.0.0"
   },
   "keywords": [],
   "author": "",
