--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "path": "^0.12.7",
     "punycode": "^2.3.1",
     "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
     "web3": "^4.13.0",
     "whatwg-url": "^14.0.0"
   },
