--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.10",
     "ethers": "^6.13.3",
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
     "inquirer": "^11.1.0",
+    "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2.7.0",
+    "node-forge": "^1.3.1",
     "node-telegram-bot-api": "^0.66.0",
     "path": "^0.12.7",
     "punycode": "^2.3.1",
