--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "base64-js": "^1.5.1",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "ecdsa": "^0.7.0",
     "ejs": "^3.1.10",
+    "elliptic": "^6.5.7",
     "ethers": "^6.13.3",
     "express": "^4.21.0",
     "express-session": "^1.18.1",
