--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "serve -s -l $PORT ."
   },
   "dependencies": {
     "axios": "^1.7.7",
