--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-telegram-bot-api": "^0.63.0",
     "path": "^0.12.7",
     "punycode": "^2.3.1",
+    "serve": "^14.2.4",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
     "web3": "^4.13.0",
